added in link to find.js and link to google api

--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
 <body>
 
     <button id="submit">Test</button>
+
+    <button id="googlePlacesSubmit">Google Places Testing Button</button>
     
 
     <script src="https://code.jquery.com/jquery.js"></script>
-    <script type="text/javascripty" src="assets/app.js"></script>
+    <script type="text/javascript" src="assets/app.js"></script>
+    <script type="text/javascript" src="find.js"></script>
 </body>
 </html>
