displaying the recipe info into html

--- a/index.html
+++ b/index.html
@@ -12,10 +12,16 @@
 </head>
 <body>
 
+    <form action="input">
+        <input type="text" id="recipe-search">
+    </form>
+
     <button id="submit">Test</button>
+
+    <div id="recipe-results"></div>
     
 
     <script src="https://code.jquery.com/jquery.js"></script>
-    <script type="text/javascripty" src="assets/app.js"></script>
+    <script type="text/javascript" src="assets/app.js"></script>
 </body>
 </html>
