fixed card sizes, margins and spacing

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <!-- link to css style sheet -->
     <link rel="stylesheet" href="assets/style.css">
     <script src="https://code.jquery.com/jquery.js"></script>
+    <!-- logo and title of site -->
+    <link rel="icon" type="image/gif" href="assets/images/og_image.jpg" />
+   <title>EZ-EATZ</title>
 
 
 </head>
@@ -31,7 +34,7 @@
         <div class="col-md-6">
 
             <form action="input">
-                <input type="text" id="recipe-search" placeholder= "What do you want to make?!">
+                <input type="text" id="recipe-search" placeholder= "">
                 <button class="submit">Lets get cooking!</button>
             </form>
             <br>
