--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <script src="https://code.jquery.com/jquery.js"></script>
   <!-- logo and title of site -->
   <link rel="icon" type="image/gif" href="assets/images/og_image.jpg" />
+  <link href="https://fonts.googleapis.com/css?family=Baloo+Chettan|Josefin+Sans|Lato|Lobster|Open+Sans+Condensed:300|Pacifico|Roboto+Mono&display=swap" rel="stylesheet">
   <title>EZ-EATZ</title>
 
 
