--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   <script src="https://code.jquery.com/jquery.js"></script>
   <!-- logo and title of site -->
   <link rel="icon" type="image/gif" href="assets/images/og_image.jpg" />
-  <link href="https://fonts.googleapis.com/css?family=Baloo+Chettan|Josefin+Sans|Lato|Lobster|Open+Sans+Condensed:300|Pacifico|Roboto+Mono&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Baloo+Chettan|Josefin+Sans|Lato|Lobster|Open+Sans+Condensed:300|Pacifico|Roboto+Mono&display=swap"
+    rel="stylesheet">
   <title>EZ-EATZ</title>
 
 
@@ -39,7 +41,7 @@
     <div class="col-md-6 left">
 
       <h1>MAKE</h1>
-      <p>Type in the name of the dish you want to cook or the ingredients you have!</p>
+      <p class="text">Type in the name of the dish you want to cook or the ingredients you have!</p>
       <form action="input">
         <input type="text" id="recipe-search" placeholder="">
         <button class="submit">Lets get cooking!</button>
@@ -50,14 +52,24 @@
 
 
     <div class="col-md-6">
-      <h1>FIND</h1>
-      Look for local pizza joints here, or whatever you are in the mood for!
+      <h1 class="text">FIND</h1>
+     <p class="text"> Look for local pizza joints here, or whatever you are in the mood for!</p>
       <form action="">
         <input id="searchText">
         <button id="googlePlacesSubmit">Lets go get something to eat!</button>
       </form><br><br>
       <div id="map"></div>
+      <!--Card for Directions for future features-->
+      <!-- <div class="card bg-light mb-3" id="directions" style="max-width: 18rem;">
+        <div class="card-header card-1">Header</div>
+        <div class="card-body">
+          <h5 class="card-title card-1">Light card title</h5>
+          <p class="card-text card-1">Some quick example text to build on the card title and make up the bulk of the
+            card's content.</p>
+        </div>
+      </div> -->
     </div>
+
 
   </div>
 
@@ -65,100 +77,123 @@
   <!-- ********** CODE FOR GOOGLE MAPS ********** -->
   <script>
     var map, service;
-      var markers = [];
-      function initMap() {
-        //map options
-        var options = {
-          zoom: 12,
-          center: { lat: 28.5383, lng: -81.3792 }
-        }
-  
-        //new map
-        map = new google.maps.Map(document.getElementById('map'), options);
+    var markers = [];
+    function initMap() {
+      //map options
+      var options = {
+        zoom: 12,
+        center: { lat: 28.5383, lng: -81.3792 }
       }
-      if (navigator.geolocation) {
-          navigator.geolocation.getCurrentPosition(function (position) {
-            console.log(position);
-            //finds the lat and lng of the user after asking for permission
-            var pos = {
-              lat: position.coords.latitude,
-              lng: position.coords.longitude
-            }
-            //centers the map to the position of the user's location
-            map.setCenter(pos);
-            console.log(pos)
-            //places location variable
-            var userLocation = new google.maps.LatLng(position.coords.latitude, position.coords.longitude);
-            //places marker on user location
-            var marker = new google.maps.Marker({
-              position: userLocation,
-              map: map
-            })
-            //when the test button is click it will ask for user's location
-      $("#googlePlacesSubmit").on("click", function (e) {
-        e.preventDefault();
-        // Sets the map on all markers in the array.
-        function setMapOnAll(map) {
-          for (var i = 0; i < markers.length; i++) {
-            markers[i].setMap(map);
-          }
+
+      //new map
+      map = new google.maps.Map(document.getElementById('map'), options);
+
+    }
+
+    if (navigator.geolocation) {
+      navigator.geolocation.getCurrentPosition(function (position) {
+        console.log(position);
+        //finds the lat and lng of the user after asking for permission
+        var pos = {
+          lat: position.coords.latitude,
+          lng: position.coords.longitude
         }
-        setMapOnAll(null);
-        markers = [];
-        
-            //search parameters
-            var searchPara = $("#searchText").val().trim();
-            console.log("search paramaters: " + searchPara);
-            //create parameters for search
-            var request = {
-              location: userLocation,
-              radius: '500',
-              query: searchPara
+        //centers the map to the position of the user's location
+        map.setCenter(pos);
+        console.log(pos)
+        //places location variable
+        var userLocation = new google.maps.LatLng(position.coords.latitude, position.coords.longitude);
+        //places marker on user location
+        var marker = new google.maps.Marker({
+          position: userLocation,
+          map: map
+        })
+        //when the test button is click it will ask for user's location
+        $("#googlePlacesSubmit").on("click", function (e) {
+          e.preventDefault();
+          // Sets the map on all markers in the array.
+          function setMapOnAll(map) {
+            for (var i = 0; i < markers.length; i++) {
+              markers[i].setMap(map);
             }
-            //create marker function
-            function createMarker(props) {
-              var marker = new google.maps.Marker({
-                position: props.geometry.location,
-                map: map
-              })
-              markers.push(marker);
-              var contentString = props.name + "<br>" + "Rating: " + props.rating + "/5" + "<br><button id='dir'>Directions</button>";
-              //infoWindow variable
-              var infoWindow = new google.maps.InfoWindow({
-                content: contentString
-              })
-              //marker click function
-              marker.addListener('click', function () {
-                infoWindow.open(map, marker);
-              });
-            }
-  
-  
-            //initialize the search service from google places api 
-            service = new google.maps.places.PlacesService(map);
-            service.textSearch(request, callback);
-            function callback(results, status) {
-              if (status == google.maps.places.PlacesServiceStatus.OK) {
-                for (var i = 0; i < results.length; i++) {
-                  var place = results[i];
-                  console.log(place);
-                  createMarker(place);
+          }
+          setMapOnAll(null);
+          markers = [];
+
+          //search parameters
+          var searchPara = $("#searchText").val().trim();
+          console.log("search paramaters: " + searchPara);
+          //create parameters for search
+          var request = {
+            location: userLocation,
+            radius: '500',
+            query: searchPara
+          }
+          // //create marker function
+          // function createMarker(props) {
+          //   var marker = new google.maps.Marker({
+          //     position: props.geometry.location,
+          //     map: map
+          //   })
+          //   markers.push(marker);
+          //   var contentString = props.name + "<br>" + "Rating: " + props.rating + "/5" + "<br><button id='dir'>Directions</button>";
+          //   //infoWindow variable
+          //   var infoWindow = new google.maps.InfoWindow({
+          //     content: contentString
+          //   })
+          //   //marker click function
+          //   marker.addListener('click', function () {
+          //     infoWindow.open(map, marker);
+          //   });
+          // }
+
+
+          //initialize the search service from google places api 
+          var infowindow = new google.maps.InfoWindow();
+
+          service = new google.maps.places.PlacesService(map);
+          service.textSearch(request, callback);
+          function callback(results, status) {
+            if (status == google.maps.places.PlacesServiceStatus.OK) {
+              for (var i = 0; i < results.length; i++) {
+                var place = results[i];
+                console.log(place);
+                request = {
+                  placeId: place.place_id
                 }
+                // createMarker(place);
+                service.getDetails(request, function (place, status) {
+                  if (status === google.maps.places.PlacesServiceStatus.OK) {
+                    var marker = new google.maps.Marker({
+                      map: map,
+                      position: place.geometry.location
+                    });
+                    google.maps.event.addListener(marker, 'click', function () {
+                      infowindow.setContent('<div><strong>' + place.name + '</strong><br>'  +
+                        place.formatted_address + "<br>" + "Rating: " + place.rating + "/5" + "<br><button id='dir'>Directions</button>" + '</div>');
+                      infowindow.open(map, this);
+                    });
+                  }
+                });
               }
             }
-  
-            //displays data of the location in readable formats
-            $.get("https://maps.googleapis.com/maps/api/geocode/json?key=AIzaSyBLVApErG8r5OM_aMWvRTl09tmGcIhHfWU&latlng=" + position.coords.latitude + "," + position.coords.longitude + "&sensor=false", function (data) {
-              console.log(data);
-            })
-          });
-         
-   
-           })} else {
-          console.log("doesn't support geolocation");
-        }
+          }
 
 
+
+
+          //displays data of the location in readable formats
+          $.get("https://maps.googleapis.com/maps/api/geocode/json?key=AIzaSyBLVApErG8r5OM_aMWvRTl09tmGcIhHfWU&latlng=" + position.coords.latitude + "," + position.coords.longitude + "&sensor=false", function (data) {
+            console.log(data);
+          })
+        });
+
+
+      })
+
+    } else {
+      console.log("doesn't support geolocation");
+    }
 
 
   </script>
