--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <h1 class="big">EZ-EATZ</h1>
 
       <p> Are you lazy or helpless and do not know how to cook? Then let us help you either find a local spot to find
-        what you are craving! Or if you are feeling adventurous then lets look up some recipes based off of what you
+        what you are craving for! Or if you are feeling adventurous then lets look up some recipes based off of what you
         want to cook or something your mom shared on Facebook that acutallly looked good!</p>
     </div>
   </div>
