--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     <div class="logo">
       <h1>EZ-EATZ</h1>
 
-      <p> Are you lazy or helpless and do not know how to cook? Then let us help you either find a local spot to find
+      <p> Are you lazy? or helpless? Don't know how to cook? Then let us help you either find a local spot to find
         what you are craving! Or if you are feeling adventurous then lets look up some recipes based off of what you
-        want to cook or something your mom shared on Facebook that acutallly looked good!</p>
+        want to cook or something your mom shared on Facebook that acutally looked good!</p>
     </div>
   </div>
   <!---header-wrap-End--->
@@ -39,7 +39,7 @@
     <div class="col-md-6 left">
 
       <h1>MAKE</h1>
-      <p>Type in the name of the dish you want to cook or the ingredients you have!</p>
+      <p>Input the type of dish you want to cook or the ingredients you have!</p>
       <form action="input">
         <input type="text" id="recipe-search" placeholder="">
         <button class="submit">Lets get cooking!</button>
